[package]
name = "rsjop"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Zuipperpips <artuokfya@gmail.com>"]
decription = "A Rust implementation for the Joy Of Programming game API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
ndarray = "0.15.6"
nom = "7.1.3"
serde = "1.0.195"
